--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <button type="button" id="on" onclick="bulb(1)">lightON</button>
         <button type="button" id="off" onclick="bulb(2)">lightOFF</button> 
     </div>
-    <script src="sc.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
